--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1163,3 +1163,14 @@ a {
   color: var(--color-main);
   font-weight: 1.4rem;
 }
+#parent .radio-option {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+#parent .radio-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
