--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -54,9 +54,16 @@
 
     <!-- Activities Start -->
     {% include 'base/activity_component.html' %}
-
+    
     <!-- Activities End -->
   </div>
+
+  <div class="container">
+    <div class="robot-icon">
+      {% include 'base/bot_component.html' %}
+    </div>
+  </div>
+  
 </main>
 
 {% endblock %}
