--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -245,7 +245,7 @@ a {
 }
 
 .mobile-menu {
-  margin-bottom: 3rem;
+  margin-bottom: 5rem;
 }
 
 .mobile-menuItems {
@@ -1173,4 +1173,18 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#robot-icon {
+  position: fixed;  /* 使元素固定在視窗中的某個位置 */
+  right: 20px;      /* 將元素放置在距離視窗右邊 20 像素的位置 */
+  bottom: 20px;     /* 將元素放置在距離視窗底部 20 像素的位置 */
+  font-size: 100px;
+  cursor: pointer;
+}
+
+#dialog {
+  border: 1px solid black;
+  padding: 10px;
+  width: 200px;
 }
