Auto stash before merge of "main" and "origin/main"

--- a/base/templates/base/bot_component.html
+++ b/base/templates/base/bot_component.html
@@ -1,11 +1,11 @@
-
+{% load static %}
 <!-- HTML -->
-<div id="robot-icon">
-  <a href="{% url 'bot_chat' %}" class="btn btn--link">🤖</a>
+<div class ="robot-icon">
+  <a href="{% url 'bot_chat' %}" class="btn btn--link">
+    <img src="{% static 'images/robot.svg' %}" />
+  </a>
 </div>
-<div id="dialog" hidden>
-  <p>Hello, I'm your robot assistant!</p>
-</div>
+
 
 
 
