--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1175,16 +1175,16 @@ a {
   align-items: center;
 }
 
-#robot-icon {
-  position: fixed;  /* 使元素固定在視窗中的某個位置 */
-  right: 20px;      /* 將元素放置在距離視窗右邊 20 像素的位置 */
-  bottom: 20px;     /* 將元素放置在距離視窗底部 20 像素的位置 */
-  font-size: 100px;
-  cursor: pointer;
+.robot-icon {
+  position: fixed ;  /* 使元素固定在視窗中的某個位置 */
+  right: 100px  ;     /* 將元素放置在距離視窗右邊 20 像素的位置 */
+  bottom: 20px ;     /* 將元素放置在距離視窗底部 20 像素的位置 */
+  width: 120px ;
+  height: auto ;
+  cursor: pointer ;
 }
 
-#dialog {
-  border: 1px solid black;
-  padding: 10px;
-  width: 200px;
+.robot-icon:hover {
+  transform: scale(1.2) ;
+  transition: transform 0.5s ;
 }
