little fix(增加書本連結)

--- a/base/templates/base/bot_component.html
+++ b/base/templates/base/bot_component.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!-- HTML -->
-<div class ="robot-icon">
+<div class ="robot-icon" title = "你好，我是你的 AI 助理">
   <a href="{% url 'bot_chat' %}" class="btn btn--link">
     <img src="{% static 'images/robot.svg' %}" />
   </a>
