--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1174,7 +1174,6 @@ a {
   flex-direction: column;
   align-items: center;
 }
-
 .robot-icon {
   position: fixed ;  /* 使元素固定在視窗中的某個位置 */
   right: 100px  ;     /* 將元素放置在距離視窗右邊 20 像素的位置 */
@@ -1187,4 +1186,10 @@ a {
 .robot-icon:hover {
   transform: scale(1.2) ;
   transition: transform 0.5s ;
+}
+
+#dialog {
+  border: 1px solid black;
+  padding: 10px;
+  width: 200px;
 }
