--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <header class="header header--loggedIn">
     <div class="container">
-        <a href="{% url 'home' %}" class="header__logo">
+        <a href="{% url 'book-learning' %}" class="header__logo">
             <img src="{% static 'images/real_book.png' %}" />
         </a>
         
