--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -12,6 +12,9 @@
   --color-bg: #2d2d39;
   --color-success: #5dd693;
   --color-error: #fc4b0b;
+  --chatBot_ZIndex: 100;
+  /*Z-Index to keep Chat Bot top of all other elements*/
+  --chatBot_windowCommonRadius: 5px;
 }
 
 /*========== base styles ==========*/
@@ -150,7 +153,7 @@ a {
   display: block;
   position: absolute;
   background-color: var(--color-gray);
-  z-index: 111;
+  z-index: 30;
   border-radius: 50%;
   border: 0.3rem solid var(--color-dark);
 }
@@ -1174,22 +1177,200 @@ a {
   flex-direction: column;
   align-items: center;
 }
-.robot-icon {
-  position: fixed ;  /* 使元素固定在視窗中的某個位置 */
-  right: 100px  ;     /* 將元素放置在距離視窗右邊 20 像素的位置 */
-  bottom: 20px ;     /* 將元素放置在距離視窗底部 20 像素的位置 */
-  width: 120px ;
-  height: auto ;
-  cursor: pointer ;
+
+/*========== chat_app ==========*/
+.showBot {
+  cursor: pointer;
 }
 
-.robot-icon:hover {
-  transform: scale(1.2) ;
-  transition: transform 0.5s ;
+.container_Bot {
+  position: fixed;
+  right: 30px;
+  /*Right and bottom are set to position the chat bot window in the right-corner of the screen*/
+  bottom:30px;
+  width: 450px;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 10px 10px 5px #aaaaaa;
+  background-color: dodgerblue;
+  border: 2px solid dodgerblue;
+  border-radius: var(--chatBot_windowCommonRadius);
+  z-index: var(--chatBot_ZIndex);
 }
 
-#dialog {
-  border: 1px solid black;
+.header_Bot {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+.header_Bot h1 {
+  color: white;
+  padding: 15px;
+  font-size: 2em;
+}
+
+.header_Bot img {
+  width: 75px;
   padding: 10px;
-  width: 200px;
+}
+
+.body_Bot  {
+  display: flex;
+  flex: 1;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.7);
+  margin-top: auto;
+  overflow-y: scroll;
+  flex-direction: column-reverse;
+  scroll-behavior: smooth;
+  padding: 20px 10px;
+  border-radius: 5px 5px 0px 0px;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.body_Bot::-webkit-scrollbar {
+  display: none;
+}
+
+.botTyping-bg {
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 0px 0px 10px 20px;
+}
+
+.botTyping {
+  margin-right: 60%;
+  color: #fff;
+}
+
+.bot_message {
+  background-color: dodgerblue;
+  padding: 10px;
+  color: white;
+  width: fit-content;
+  border-top-left-radius: 0px !important;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+
+.user_message {
+  margin-left: auto;
+  background-color: white;
+  color: black;
+  padding: 10px;
+  width: fit-content;
+  border-top-right-radius: 0px !important;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+
+.bot-profile {
+  width: 13%;
+  padding-right: 5px;
+}
+
+.user-profile {
+  width: 12%;
+  padding-left: 5px;
+}
+
+.bot-message-block {
+  display: flex;
+  align-items: baseline;
+}
+
+.user-message-block {
+  display: flex;
+  align-items: baseline;
+  flex-direction: row-reverse;
+}
+
+.footer {
+  display: flex;
+}
+
+.footer input {
+  flex: 1;
+  height: 40px;
+  border: none;
+  border-radius: 0px 0px 0px 5px;
+  outline: none;
+  padding-left: 5px;
+  font-size: 16px;
+}
+
+.footer button {
+  width: 100px;
+  font-size: 18px;
+  border: none;
+  border-radius: 0px 0px 5px 0px;
+  outline: none;
+  background-color: dodgerblue;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.footer button:hover {
+  background-color: blue;
+}
+
+.footer button:disabled {
+  background-color: #aaaaaa;
+}
+
+.showBot:hover {
+  background-color: blue;
+}
+
+.hideBot {
+  padding: 10px;
+  font-size: 35px;
+  border: none;
+  outline: none;
+  background-color: dodgerblue;
+  color: white;
+  cursor: pointer;
+}
+
+.aapi-popup-dialog {
+  position: absolute;
+  right: 30px;
+  bottom: 145px;
+  font-size: 18px;
+  padding: 10px 10px 10px 10px;
+  border: none;
+  border-radius: var(--chatBot_windowCommonRadius);
+  outline: none;
+  background-color: dodgerblue;
+  color: #f8f8f8;
+}
+
+.attention {
+  position: fixed;
+  right: 25px;
+  bottom: 195px;
+  padding: 10px;
+  border-radius: 100%;
+  background-color: red;
+}
+
+.down-triangle {
+  width: 0;
+  height: 0;
+  position: fixed;
+  right: 68px;
+  bottom: 125px;
+  border: 20px solid transparent;
+  border-top: 20px solid dodgerblue;
+  border-bottom: 0;
+}
+
+.hidden {
+  display: none;
 }
