--- a/chat_app/templates/chat_app/chat_app_main.html
+++ b/chat_app/templates/chat_app/chat_app_main.html
@@ -121,7 +121,7 @@
   <!-- Here is the Aapi dialog message box to catch user's attention -->
   <div class="popup-dialog fade-in-transition hidden">
     <div class="aapi-popup-dialog">
-      <span>Hi there, I'm Teacher Bot. <br>How may I help you today?</span>
+      <span>Hi there, I'm Teacher Bot. <br>How can I help you today?</span>
     </div>
     <div class="down-triangle"></div>
   </div>
@@ -208,7 +208,7 @@
       }, fadeIn_fadeOut_transition_speed);
 
       if (messages.length === 0) {
-        let msg2 = { name: "Bot", message: "Hello! How can I help you? <br> Type 'help' to get help" };
+        let msg2 = { name: "Bot", message: "Hello! I am Teacher Bot <br> How can I help you?" };
         messages.push(msg2);
         updateChatText();
         scrollToBottom();
