完成API串接，teacher-bot可順利運行
新增.env隱藏key

--- a/templates/main.html
+++ b/templates/main.html
@@ -27,7 +27,7 @@
 
 
     {% endblock %}
-    
+    {%include 'chat_app/chat_app_main.html'%}
     <script src="{% static 'js/script.js' %}"></script>
 </body>
 
