build data structure course
2024.2.28

--- a/chat_app/templates/chat_app/chat_app_main.html
+++ b/chat_app/templates/chat_app/chat_app_main.html
@@ -260,7 +260,7 @@
 
     // Disable the send button if there is no text in query field
 
-    const regex = /[A-Za-z0-9]/
+    const regex = /\S/  //#/[A-Za-z0-9]/ //
     let submit_btn = document.querySelector(".submit_btn");
     function checkText() {
       const inp_string = document.querySelector("#query").value
