--- a/base/templates/base/book_learning.html
+++ b/base/templates/base/book_learning.html
@@ -59,12 +59,12 @@
     <figcaption>嵌入式系統</figcaption>
   </figure>
   <figure>
-    <a href="https://example.com/page4.html"><img src="{% static 'images/book_img/chain_rule.png' %}" alt="Image 4"></a>
-    <figcaption>Caption for Image 4</figcaption>
+    <a href="{% url 'data_structure' %}"><img src="https://media.licdn.com/dms/image/C4E12AQESF5jrbD0NXw/article-cover_image-shrink_600_2000/0/1623083724926?e=2147483647&v=beta&t=fm43wRYCaqwcdGcYychRZ59Ynq9vint83rInIkTfnk8" alt="Image 4"></a>
+    <figcaption>資料結構</figcaption>
   </figure>
   <figure>
-    <a href="https://example.com/page5.html"><img src="{% static 'images/book_img/chain_rule.png' %}" alt="Image 5"></a>
-    <figcaption>Caption for Image 5</figcaption>
+    <a href="https://example.com/page5.html"><img src="https://media.istockphoto.com/id/1166955762/zh/%E5%90%91%E9%87%8F/%E6%BC%94%E7%AE%97%E6%B3%95%E7%B4%B0%E7%B7%9A%E5%9C%96%E7%A4%BA%E5%BE%9E%E4%BA%BA%E5%B7%A5%E6%99%BA%E6%85%A7%E5%9C%96%E7%A4%BA%E6%94%B6%E9%9B%86%E5%89%B5%E9%80%A0%E6%80%A7%E7%9A%84%E7%B0%A1%E5%96%AE%E8%A8%AD%E8%A8%88%E7%B6%B2%E9%A0%81%E8%A8%AD%E8%A8%88%E5%92%8C%E7%A7%BB%E5%8B%95%E6%87%89%E7%94%A8%E4%BD%BF%E7%94%A8%E7%9A%84%E5%A4%A7%E7%B6%B1%E6%BC%94%E7%AE%97%E6%B3%95%E5%9C%96%E7%A4%BA.jpg?s=612x612&w=0&k=20&c=EL6K664FqxUk7RMNI_ynV8-eTnerZQ44BXVqR_sjI2w=" alt="Image 5"></a>
+    <figcaption>演算法</figcaption>
   </figure>
   <figure>
     <a href="https://example.com/page6.html"><img src="{% static 'images/book_img/chain_rule.png' %}" alt="Image 6"></a>
