--- a/base/templates/base/data_structure_video.html
+++ b/base/templates/base/data_structure_video.html
@@ -27,11 +27,21 @@
       <div class="col-md-4">
         <div class="course-list">
           {% for course in full_courses %}
-            <div class="course-item">
-              <a href="{% url 'data_structure' course.id %}">
-                {{ course.title }}
-              </a>
+          <div class="course-item">
+            <h3 data-toggle="collapse" data-target="#course-{{ course.id }}">
+              {{ course.title }}
+            </h3>
+            <!-- Add a loop for lessons in the course -->
+            <div id="course-{{ course.id }}" class="collapse lesson-list">
+              {% for lesson in course.lesson_set.all %}
+                <div class="lesson-item">
+                  <a href="{% url 'data_structure' course_id=course.id lesson_id=lesson.id %}">
+                    {{ lesson.title }}
+                  </a>
+                </div>
+              {% endfor %}
             </div>
+          </div>
           {% endfor %}
         </div>
       </div>
