--- a/base/templates/base/data_structure_video.html
+++ b/base/templates/base/data_structure_video.html
@@ -8,10 +8,6 @@
   h1{
     color: white;
   }
-  button{
-    color: white;
-    background-color: black;
-  }
   .arrow.rotated {
     transform: rotate(180deg);
   }
@@ -19,8 +15,10 @@
     background-color: #3f4156;
   }
   .course-item .btn {
+    width: 100%;
     margin-top: 6px;
     margin-bottom: 6px;
+    background-color: #282938;
   }
   .lesson-item a {
   color: #e1f6fb;  /* Change the link color */
