--- a/base/templates/base/data_structure_video.html
+++ b/base/templates/base/data_structure_video.html
@@ -49,7 +49,7 @@
         <div class="course-list">
           {% for course in full_courses %}
           <div class="course-item">
-            <button type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#course-{{ course.id }}">{{ course.title }} &#9660;</button>
+            <button type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#course-{{ course.id }}">{{ course.title }} </button>
             <!-- Add a loop for lessons in the course -->
             <div id="course-{{ course.id }}" class="collapse lesson-list">
               {% for lesson in course.lesson_set.all %}
